@@ -17,8 +17,8 @@ int isxdigit(int <[c]>);
 DESCRIPTION
 <<isxdigit>> is a macro which classifies ASCII integer values by table
 lookup.  It is a predicate returning non-zero for hexadecimal digits,
-and <<0>> for other characters.  It is defined only when
-<<isascii>>(<[c]>) is true or <[c]> is EOF.
+and <<0>> for other characters.  It is defined only if <[c]> is
+representable as an unsigned char or if <[c]> is EOF.
 
 You can use a compiled subroutine instead of the macro definition by
 undefining the macro using `<<#undef isxdigit>>'.
